Trying to align image to correct placement in homepage.html

--- a/Template/css/flexbox.css
+++ b/Template/css/flexbox.css
@@ -15,7 +15,6 @@
   /*Template ----*/
   .header-container div, .sale-promotion-container div{
   	margin-bottom: 1.5em;
-  	background-color:lightgrey;
   }
 
 
