--- a/Template/css/main.css
+++ b/Template/css/main.css
@@ -28,6 +28,7 @@ body {
   position: relative;
   font-size: 1.3em;
   margin-right: 3.5em;
+
   /*padding-top:0.5em;*/
 
 }
@@ -75,7 +76,21 @@ body {
 
 }
 
-/*PRODUCT LISTING*/
+/*--------------HOMEPAGE -------------*/
+
+.sale-image-homepage {
+  display:block;
+
+  max-width:100%;
+  max-height:30em;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: cover;
+}
+
+
+
+/*-------------PRODUCT LISTING ----------*/
 .product-image{
     margin-bottom: 1em;
 }
